--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,5 +108,6 @@
     <string name="title_activity_company">CompanyActivity</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="title_activity_join">JoinActivity</string>
+    <string name="title_activity_report_write">ReportWriteActivity</string>
 
 </resources>
